tests/liquid/pos/update2.js
/*@ foo ::  ({ x: { v: number | v > 10 } , y: string + number }) => void */ 
function foo(o) { 
    o.x = 20;
}
