tests/liquid/neg/objects/update-02.js

/*@ foo :: ({x: number, *: string}) => { void | true } */ 
function foo(o) {
  o.y = 10;
}
